[package]
name = "sleeper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/danielmckinnonanderson/sleeper-rs"
license-file = "LICENSE"
description = "An async Sleeper fantasy sports API client for Rust."
readme = "README.md"
keywords = ["sleeper", "fantasy", "sports", "football", "dfs"]

[dependencies]
http = "0.2.9"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["raw_value"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
mockito = "1.5.0"
